feat: added openapi code gen
